<?xml version="1.0"?>
<package>
  <name>feed_forward_control</name>
  <version>1.0.0</version>
  <description>Feed Forward Control</description>

  <maintainer email="nare@email.sc.edu">Nare Karapetyan</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="nare@email.sc.edu">Nare Karapetyan</author>

  add_message_files(
  	ForceEffect.msg)
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mavros</run_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
